--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <body>
     <header class="page-header">
       <div class="container">
-      Контакты в шапке
+      <a href="mailto:gret.schwedowa@yandex.ru" class="header-email">gret.schwedowa@yandex.ru</a>
+    <a href="tel:+79653131112" class="header-phone">+7 965 313 11 12</a>
     </div>
     </header>
 
@@ -23,6 +24,8 @@
 
     <section class="intro">
       <div class="container"><h2 class="subheading">Давайте познакомимся</h2>
+        <figure class="image-hero">
+          <img src="files/user.jpg" width="928" height="526" alt="Фотография юного верстальщика">
       <h3>Пара слов о себе</h3>
       <p>Текст с парой слов о себе.</p>
       <h3>Чем могу быть полезен</h3>
