--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 
     <section class="intro">
       <div class="container"><h2 class="subheading">Давайте познакомимся</h2>
-        <figure class="image-hero">
-          <img src="files/user.jpg" width="928" height="526" alt="Фотография юного верстальщика">
+        <figure class="user-image">
+      <img src="files/user.jpg" width="928" height="536" alt="Фотография Неопознанного Енота">
+        </figure>
       <h3>Пара слов о себе</h3>
       <p>Текст с парой слов о себе.</p>
       <h3>Чем могу быть полезен</h3>
@@ -36,7 +37,9 @@
     <section class="portfolio">
       <div class="container">
       <h2 class="subheading">Мои работы</h2>
-
+      <figure class="project-image">
+      <img src="files/project.jpg" width="928" height="536" alt="Cайт магазина товаров для дома">
+      </figure>
       <h3>Магазин товаров для дома</h3>
       <p>Мой первый сайт.</p>
 
@@ -46,7 +49,10 @@
     </section>
 
     <footer class="page-footer">
-      Контакты в подвале
+       <div class="container">
+      <a href="mailto:gret.schwedowa@yandex.ru" class="footer-email">gret.schwedowa@yandex.ru</a>
+    <a href="tel:+79653131112" class="footer-phone">+7 965 313 11 12</a>
+    </div>
     </footer>
   </body>
 </html>
